fix on undefineds on registering new user when phone left empty on purpose

--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -242,24 +242,24 @@
             <div class="control-group">
               <label class="control-label">{{ui.groups.address}}</label>
               <div class="controls">
-                <input  type="text" 
-                        class="span5" 
+                <input  type="text"
+                        class="span5"
                         ng-model="memberForm.PostAddress">
               </div>
             </div>
             <div class="control-group">
               <label class="control-label">{{ui.groups.postCode}}</label>
               <div class="controls">
-                <input  type="text" 
-                        class="span2" 
+                <input  type="text"
+                        class="span2"
                         ng-model="memberForm.PostZip">
               </div>
             </div>
             <div class="control-group">
               <label class="control-label">{{ui.groups.city}}</label>
               <div class="controls">
-                <input  type="text" 
-                        class="span3" 
+                <input  type="text"
+                        class="span3"
                         ng-model="memberForm.PostCity">
               </div>
             </div>
@@ -314,7 +314,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr ng-repeat="candidate in candidates"">
+            <tr ng-repeat="candidate in candidates">
               <td>{{$index + 1}}</td>
               <td>{{candidate.name}}</td>
               <td>
