--- a/war/css/app.css
+++ b/war/css/app.css
@@ -676,6 +676,90 @@ dl dd {
   font-weight: bold;
 }
 
+#sa {
+  position: relative;
+}
+#sa #sa-state {
+  position: absolute;
+  top: 10px;
+  right: 0;
+}
+#sa ul#sa-setup {
+  margin: 0;
+  padding: 0;
+  margin-top: -20px;
+  list-style: none;
+}
+#sa ul#sa-setup li {
+  border-bottom: 1px solid #ddd;
+  overflow: hidden;
+  height: 100%;
+}
+#sa ul#sa-setup li:nth-child(odd) {
+  background-color: #f2f1ed;
+}
+#sa ul#sa-setup li:nth-child(even) {
+  background-color: #f9f9f9;
+}
+#sa ul#sa-setup li:last-child {
+  border-bottom: none;
+}
+#sa ul#sa-setup li .sa-member {
+  display: inline;
+  float: left;
+  padding: 15px;
+  min-width: 170px;
+  margin-right: 15px;
+}
+#sa ul#sa-setup li .sa-member .sa-member-icon {
+  margin-right: 15px;
+  float: left;
+  display: block;
+  min-width: 54px;
+  height: 36px;
+  text-align: center;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  color: #fff;
+  margin-bottom: 5px;
+  padding-top: 18px;
+  background-color: #415e6b;
+}
+#sa ul#sa-setup li .sa-member .sa-member-icon strong {
+  font-size: 24px;
+}
+#sa ul#sa-setup li .sa-member .sa-icon-driver {
+  background-color: #253943;
+}
+#sa ul#sa-setup li .sa-member .sa-icon-commander {
+  background-color: #344c58;
+}
+#sa ul#sa-setup li .sa-member .sa-icon-reserve {
+  background-color: #a0a0a0;
+}
+#sa ul#sa-setup li .sa-member .sa-member-card {
+  float: left;
+}
+#sa ul#sa-setup li .sa-member .sa-member-card h5 {
+  margin-top: 0px;
+  margin-bottom: 5px;
+}
+#sa ul#sa-setup li .sa-member .sa-member-card hr {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 5px;
+}
+#sa ul#sa-setup li .sa-member .sa-member-card span {
+  font-size: 13px;
+}
+#sa ul#sa-setup li#sa-truck {
+  margin-top: 25px;
+}
+#sa button {
+  margin-top: 10px;
+}
+
 label {
   font-weight: bold;
 }
