--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -1,48 +1,74 @@
 <section id="dashboard">
 
-  <div class="well well-large greetings"
-       ng-hide="config.smartAlarm">
+  <div class="well well-large greetings">
     <h2>{{ui.dashboard.welcome}}, {{app.resources.name}}</h2>
   </div>
 
-  <!--Smart Alarm greetings-->
-  <div class="row-fluid">
-    <div class="well greetings span12"
-         ng-show="config.smartAlarm"
-         style="height: 100px;">
-      <h2>{{ui.dashboard.welcome}}, {{app.resources.name}}</h2>
-    </div>
-
-    <!--<div class="well greetings span3"-->
-         <!--ng-show="config.smartAlarm"-->
-         <!--style="height: 100px;">-->
-      <!--<h4 style="margin: -5px 0 10px 0; padding: 0;">Huidige Status</h4>-->
-      <!--<span style="color: {{ app.guard.currentState.color }}">{{ app.guard.currentState.label }}</span><br>-->
-      <!--StandBy als <span class="label label-inverse" style="margin-left: 5px;">{{ app.guard.role.toUpperCase() }}</span>-->
-    <!--</div>-->
-
-
-  </div>
-  <!--end Smart Alarm greetings-->
-
 
 
   <div class="row-fluid">
-    <div class="widget span12"
+    <div id="sa"
+         class="widget span12"
          ng-show="config.profile.smartAlarm">
+
       <div class="head">
         <h4>SlimAlarmeren</h4>
-        <div class="pull-right">
-          <span ng-show="app.guard.role && app.guard.currentState">Status:&nbsp;</span>
-          <span class="label" style="background-color: {{app.guard.currentState.color}}">{{ app.guard.currentState.label.toUpperCase() }}</span>&nbsp;
+
+        <div id="sa-state"
+              class="pull-right">
+          <small ng-show="app.guard.role && app.guard.currentState">
+            <i class="icon-fire"></i>&nbsp;Status </small>&nbsp;&nbsp;
+          <span class="label" style="background-color:{{app.guard.currentState.color}}">{{ app.guard.currentState.label.toUpperCase() }}</span>
           <span class="label label-inverse" style="margin-left: 5px;">{{ app.guard.role.toUpperCase() }}</span>
         </div>
+
       </div>
       <hr/>
 
-      <p>Some content comes here</p>
+      <ul id="sa-setup">
+
+        <li id="sa-truck">
+          <div class="sa-member"
+                ng-repeat="trucker in saMembers.truck">
+            <span class="sa-member-icon {{(trucker.class) && trucker.class}}">
+              <strong>{{trucker.icon}}</strong>
+            </span>
+            <div class="sa-member-card">
+              <h5>{{trucker.role}}</h5>
+              <hr/>
+              <span>{{trucker.name}}</span>
+            </div>
+          </div>
+        </li>
+
+        <li id="sa-reserves"
+            ng-show="toggleReserves">
+          <div class="sa-member"
+               ng-repeat="reserve in saMembers.reserves">
+            <span class="sa-member-icon sa-icon-reserve">
+              <strong>R{{$index+1}}</strong>
+            </span>
+            <div class="sa-member-card">
+              <h5>Reserve {{$index+1}}</h5>
+              <hr/>
+              <span>{{reserve}}</span>
+            </div>
+          </div>
+        </li>
+
+      </ul>
+
+      <button ng-click="toggleReserves=!toggleReserves"
+              class="btn btn-mini pull-right">
+        <span ng-show="toggleReserves">Toon reserves</span>
+        <span ng-hide="toggleReserves">Verberg reserves</span>
+      </button>
+
     </div>
   </div>
+
+
+
 
 
 
@@ -69,7 +95,7 @@
         <p ng-show="loadingPies">{{ui.dashboard.groupOverviews}}</p>
 
         <!-- pie loop -->
-        <ul id="pies" ng-hide="loadingPies || checkAnyPies()">
+        <ul id="pies" ng-hide="loadingPies || checkAnyPies()" >
           <li ng-repeat="pie in pies">
 
             <header>
