smartAlarming for fire dep. in the air

--- a/sass/app/_dashboard.scss
+++ b/sass/app/_dashboard.scss
@@ -463,7 +463,7 @@
         }
 
         .sa-icon-commander {
-          background-color: #344c58;
+          background-color: #ba6a24;
         }
 
         .sa-icon-reserve {
