--- a/war/css/app.css
+++ b/war/css/app.css
@@ -733,7 +733,7 @@ dl dd {
   background-color: #253943;
 }
 #sa ul#sa-setup li .sa-member .sa-icon-commander {
-  background-color: #344c58;
+  background-color: #ba6a24;
 }
 #sa ul#sa-setup li .sa-member .sa-icon-reserve {
   background-color: #a0a0a0;
