mature state of switching to next year

--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -15,8 +15,6 @@
 
 
 
-
-
   <!-- timeline controls -->
   <div class="row-fluid"
        id="timeline-controls"
@@ -129,7 +127,7 @@
         <div class="control-group dater-mobile" ng-show="views.slot.add || views.slot.edit || views.wish">
           <input  name="date-start"
                   type="datetime-local"
-                  ng-model="slot.start.datetime">
+                  ng-model="slot.start.datetime" />
         </div>
         <div class="control-group dater-mobile"
              ng-show="views.group || views.member">
