some improvements in tv view

--- a/war/js/views/tv.html
+++ b/war/js/views/tv.html
@@ -1,4 +1,4 @@
-<section id="dashboard">
+<section id="dashboard" style="margin-top: -40px;">
 
   <!-- row-fluid -->
   <div class="row-fluid">
@@ -6,7 +6,7 @@
 
     <!--smartAlarming-->
     <div id="sa"
-         class="widget span8"
+         class="widget span9"
          ng-show="config.profile.smartAlarm">
 
       <div class="head">
@@ -88,7 +88,7 @@
 
 
     <!-- announcements sidebar -->
-    <div class="widget span4"
+    <div class="widget span3"
           style="{{(browser.mobile) && 'margin-left: 0'}}"
           ng-show="config.profile.p2000.status">
 
