--- a/war/css/app.css
+++ b/war/css/app.css
@@ -708,7 +708,7 @@ dl dd {
   display: inline;
   float: left;
   padding: 15px;
-  min-width: 170px;
+  min-width: 185px;
   margin-right: 15px;
 }
 #sa ul#sa-setup li .sa-member .sa-member-icon {
@@ -735,7 +735,13 @@ dl dd {
 #sa ul#sa-setup li .sa-member .sa-icon-commander {
   background-color: #ba6a24;
 }
-#sa ul#sa-setup li .sa-member .sa-icon-reserve {
+#sa ul#sa-setup li .sa-member .sa-icon-reserve-available {
+  background-color: #4f824f;
+}
+#sa ul#sa-setup li .sa-member .sa-icon-reserve-unavailable {
+  background-color: #a93232;
+}
+#sa ul#sa-setup li .sa-member .sa-icon-reserve-noplanning {
   background-color: #a0a0a0;
 }
 #sa ul#sa-setup li .sa-member .sa-member-card {
