hot fix for not existing members

--- a/war/js/views/login.html
+++ b/war/js/views/login.html
@@ -60,7 +60,7 @@
 			  	<a ng-click="changeLanguage('nl')">Nederlands</a>
 		  	</small>
 		  </p>
-		  <span class="version"><a href="version.html" target="_blank">v{{config.version}}</a></span>
+		  <span class="version"><a href="version.html" target="_blank">StandBy v{{config.version}}</a></span>
 		</form>
 	</div>
 	<!-- end loginForm -->
@@ -106,7 +106,7 @@
 
 		  <button class="btn btn-large btn-primary" type="submit">{{ui.login.resetPassword}}</button>
 		  <p><small><a ng-click="views.login=true; views.forgot=false">{{ui.login.returnLogin}}</a></small></p>
-		  <span class="version"><a href="version.html" target="_blank">v{{config.version}}</a></span>
+		  <span class="version"><a href="version.html" target="_blank">StandBy v{{config.version}}</a></span>
 		</form>
 	</div>
 	<!-- end remember login -->
@@ -127,22 +127,13 @@
 			
 			<button class="btn btn-large btn-primary" type="submit">{{ui.login.changePassword}}</button>
 
-		    <br><span class="version"><a href="version.html" target="_blank">v{{config.version}}</a></span>
+		    <br><span class="version"><a href="version.html" target="_blank">StandBy v{{config.version}}</a></span>
 		</form>
 	</div>
 	<!-- end change pass -->
 
 
 </div>
-
-
-<!-- download mobile app -->
-<!-- <div id="download">
-	<button class="btn btn-success btn-large" type="button" bs-tooltip="ui.downloads.app">
-		{{ui.login.downloadApp}}
-	</button>
-</div> -->
-<!-- end download mobile app -->
 
 
 <!-- knrm users -->
