--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -6,9 +6,51 @@
   <div class="page-header">
     <h2>{{ui.planboard.planboard}}</h2>
     <div class="btn-group pull-right">
-      <button type="submit" 
-              ng-click="toggleSlotForm()" 
-              class="btn btn-success {{(views.slot.add==true) && 'active'}}">{{ui.planboard.newAvail}}</button>
+
+      <div class="btn-group">
+
+        <button type="submit"
+                ng-click="toggleSlotForm()"
+                class="btn btn-success {{(views.slot.add==true) && 'active'}}">{{ui.planboard.newAvail}}</button>
+
+        <button class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+
+        <ul class="dropdown-menu" style="right:0; font-size: 13px;">
+          <li>
+            <a ng-click="setAvailability(true, 1)">
+              <div class="square available"></div> Beschikbaar (1 uur)
+            </a>
+          </li>
+          <li>
+            <a ng-click="setAvailability(true, 6)">
+              <div class="square available"></div> Beschikbaar (6 uur)
+            </a>
+          </li>
+          <li>
+            <a ng-click="setAvailability(true, 24)">
+              <div class="square available"></div> Beschikbaar (24 uur)
+            </a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a ng-click="setAvailability(false, 1)">
+              <div class="square unavailable"></div> Niet beschikbaar (1 uur)
+            </a>
+          </li>
+          <li>
+            <a ng-click="setAvailability(false, 6)">
+              <div class="square unavailable"></div> Niet beschikbaar (6 uur)
+            </a>
+          </li>
+          <li>
+            <a ng-click="setAvailability(false, 24)">
+              <div class="square unavailable"></div> Niet beschikbaar (24 uur)
+            </a>
+          </li>
+        </ul>
+
+      </div>
+
     </div>
   </div>
   <!-- end page header -->
