fix for not selectable groups in group selector widget in dashboard

--- a/war/js/views/dashboard-pies.html
+++ b/war/js/views/dashboard-pies.html
@@ -9,7 +9,8 @@
                 style="margin-top: 8px;">
 
               <label>
-                <input type="checkbox" ng-model="popover.selection[group.uuid].status">&nbsp;{{group.name}}
+                <input type="checkbox"
+                       ng-model="popover.selection[group.uuid].status">&nbsp;{{group.name}}
               </label>
 
               <label ng-show="popover.selection[group.uuid].status && popover.divisions"
