enhanced version document

--- a/sass/app/_login.scss
+++ b/sass/app/_login.scss
@@ -1,6 +1,4 @@
-/**
- * Welcoming page styles
- */
+// Welcoming page styles
 #welcome {
   margin: 30px auto 20px auto;
   padding: 35px 29px 19px 29px;
@@ -25,10 +23,7 @@
   }
 }
 
-
-/**
- * Box style
- */
+// Box style
 .boxed {
   margin: 0;
 
@@ -94,7 +89,6 @@
     }
   }
 }
-
 
 #demo_users {
   position: absolute;
