--- a/war/css/app.css
+++ b/war/css/app.css
@@ -162,8 +162,30 @@ dl dd {
 #versions .marketing {
   margin: 60px 0;
 }
-#versions .marketing p + h4 {
-  margin-top: 28px;
+#versions .marketing ul {
+  list-style: none;
+}
+#versions .marketing ul li {
+  margin-bottom: 30px;
+}
+#versions .marketing ul li ul li {
+  margin-bottom: 5px;
+}
+#versions .marketing p {
+  min-height: 20px;
+  overflow: hidden;
+}
+#versions .marketing p i {
+  display: inline;
+  float: right;
+}
+#versions .marketing h4 {
+  display: inline;
+  float: left;
+  margin-top: 0;
+}
+#versions .marketing hr {
+  margin: 0 0 15px 0;
 }
 
 #groups-wish form {
@@ -279,9 +301,6 @@ dl dd {
   margin-left: 2px;
 }
 
-/**
- * Welcoming page styles
- */
 #welcome {
   margin: 30px auto 20px auto;
   padding: 35px 29px 19px 29px;
@@ -304,9 +323,6 @@ dl dd {
   padding-bottom: 25px;
 }
 
-/**
- * Box style
- */
 .boxed {
   margin: 0;
 }
