--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -15,7 +15,8 @@
 
         <button class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
 
-        <ul class="dropdown-menu" style="right:0; font-size: 13px;">
+        <ul class="dropdown-menu fast-availability"
+            style="right:0; font-size: 13px;">
           <li>
             <a ng-click="setAvailability(true, 1)">
               <div class="square available"></div> Beschikbaar (1 uur)
