--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -225,7 +225,7 @@
 
       <!--mobile-->
       <div class="form-elements-group" ng-show="browser.mobile">
-        <label>{{ui.planboard.from}}</label>
+        <label>{{ui.planboard.till}}</label>
         <!-- datetime -->
         <div class="control-group dater-mobile" ng-show="views.slot.add || views.slot.edit || views.wish">
           <input  name="date-start" 
