changed description text for timeline dragging

--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -524,7 +524,7 @@
                       ng-click="registerNotification('timeLineDragging', false)"
                       data-dismiss="alert">&times;</button>
               <small>U kunt ook uw <strong><i>beschikbaarheid wijzigen</i></strong> door te dubbelklikken op reeds
-                bestaande blokken of <strong><i>door te slepen</i></strong> met uw muis met de rechtermuisknop en de
+                bestaande blokken of <strong><i>door te slepen</i></strong> met uw muis met de linkermuisknop en de
                 <strong>SHIFT (Mac)</strong> of <strong>CTRL (Windows)</strong> knop tegelijkertijd ingedrukt.</small>
             </div>
 
