hot fix for breaking user state issue on guard call

--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -23,7 +23,7 @@
                   class="label"
                   style="background-color: #4f824f">BESCHIKBAAR</span>
 
-            <span ng-show="app.guard.currentState=='noplanning'"
+            <span ng-show="app.guard.currentState=='noplanning' || app.guard.currentState=='Geen planning'"
                   class="label"
                   style="background-color: #a0a0a0">GEEN PLANNING</span>
 
