--- a/war/js/views/login.html
+++ b/war/js/views/login.html
@@ -21,14 +21,14 @@
 		  <img ng-src="{{config.profile.logos.login}}" alt="{{config.profile.title}}" />
 
 
-      <h4 class="form-signin-heading">Verhuisd</h4>
-      <p>
-        Standby is verhuisd naar de volgende locatie:
-        <a href="http://knrm.standby.ask-cs.com/#/login">
-          http://knrm.standby.ask-cs.com/
-        </a>
-      </p>
-      <br/>
+      <!--<h4 class="form-signin-heading">Verhuisd</h4>-->
+      <!--<p>-->
+        <!--Standby is verhuisd naar de volgende locatie:-->
+        <!--<a href="http://knrm.standby.ask-cs.com/#/login">-->
+          <!--http://knrm.standby.ask-cs.com/-->
+        <!--</a>-->
+      <!--</p>-->
+      <!--<br/>-->
 
 
       <!--<h4 class="form-signin-heading">Maintenance</h4>-->
@@ -37,42 +37,42 @@
       <!--<br/>-->
 
 
-      <!--<h4 class="form-signin-heading">{{ui.login.header}}</h4>-->
-      <!--<div class="alert {{alert.login.type}}" ng-show="alert.login.display">-->
-        <!--<button class="close" type="button" ng-click="alert.login=false">×</button>-->
-        <!--{{alert.login.message}}-->
-      <!--</div>-->
-		  <!--<input-->
-		    <!--class=""-->
-		    <!--type="text"-->
-		    <!--ng-model="logindata.username"-->
-		    <!--placeholder="{{ui.login.placeholder_username}}"-->
-		    <!--autofocus>-->
-		  <!--<input-->
-		      <!--class=""-->
-		      <!--type="password"-->
-		      <!--ng-model="logindata.password"-->
-		      <!--placeholder="{{ui.login.placeholder_password}}">-->
-		  <!--<label class="checkbox span3">-->
-		    <!--<input-->
-		      <!--type="checkbox"-->
-		      <!--ng-model="logindata.remember">{{ui.login.label_rememberMe}}-->
-		  <!--</label>-->
-		  <!--<button class="btn btn-large btn-primary" type="submit">{{ui.login.button_login}}</button>-->
-		  <!--<p>-->
-		  	<!--<small>-->
-          <!--<a ng-click="views.forgot=true; views.login=false;">{{ui.login.forgot_password}}</a>-->
-          <!--<span>&nbsp;|&nbsp;</span>-->
-		  		<!--<a ng-click="views.help=true">{{ui.help.help}}</a>-->
-		  	<!--</small>-->
-		  <!--</p>-->
-		  <!--<p>-->
-		  	<!--<small>-->
-			  	<!--<a ng-click="changeLanguage('en')">English</a>-->
-			  	<!--&nbsp;|&nbsp;-->
-			  	<!--<a ng-click="changeLanguage('nl')">Nederlands</a>-->
-		  	<!--</small>-->
-		  <!--</p>-->
+      <h4 class="form-signin-heading">{{ui.login.header}}</h4>
+      <div class="alert {{alert.login.type}}" ng-show="alert.login.display">
+        <button class="close" type="button" ng-click="alert.login=false">×</button>
+        {{alert.login.message}}
+      </div>
+		  <input
+		    class=""
+		    type="text"
+		    ng-model="logindata.username"
+		    placeholder="{{ui.login.placeholder_username}}"
+		    autofocus>
+		  <input
+		      class=""
+		      type="password"
+		      ng-model="logindata.password"
+		      placeholder="{{ui.login.placeholder_password}}">
+		  <label class="checkbox span3">
+		    <input
+		      type="checkbox"
+		      ng-model="logindata.remember">{{ui.login.label_rememberMe}}
+		  </label>
+		  <button class="btn btn-large btn-primary" type="submit">{{ui.login.button_login}}</button>
+		  <p>
+		  	<small>
+          <a ng-click="views.forgot=true; views.login=false;">{{ui.login.forgot_password}}</a>
+          <span>&nbsp;|&nbsp;</span>
+		  		<a ng-click="views.help=true">{{ui.help.help}}</a>
+		  	</small>
+		  </p>
+		  <p>
+		  	<small>
+			  	<a ng-click="changeLanguage('en')">English</a>
+			  	&nbsp;|&nbsp;
+			  	<a ng-click="changeLanguage('nl')">Nederlands</a>
+		  	</small>
+		  </p>
 
 
 
