--- a/sass/app/_timeline.scss
+++ b/sass/app/_timeline.scss
@@ -679,6 +679,7 @@ div.timeline-event.state-new {
 
 div.timeline-event div.timeline-event-content span.secret {
   font-size: 1px;
+  display: none;
 }
 
 .state-loading-left {
