--- a/war/js/views/settings.html
+++ b/war/js/views/settings.html
@@ -44,13 +44,13 @@
               </select>
             </div>
         
-            <div class="control-group"
-                  ng-hide="config.profile.smartAlarm">
-              <label class="control-label">Google account</label>
-              <button class="btn btn-success" 
-                      type="button"
-                      ng-click="authGoogle()">Authorize</button>
-            </div>
+            <!--<div class="control-group"-->
+                  <!--ng-hide="config.profile.smartAlarm">-->
+              <!--<label class="control-label">Google account</label>-->
+              <!--<button class="btn btn-success" -->
+                      <!--type="button"-->
+                      <!--ng-click="authGoogle()">Authorize</button>-->
+            <!--</div>-->
 
             <br>
 
